fix: scrolling on mobile

--- a/_sass/minimal-light.scss
+++ b/_sass/minimal-light.scss
@@ -573,6 +573,8 @@ screen and (max-width: 960px) {
   body {
     word-wrap: break-word;
     padding: 15px;
+    max-width: 100vw;
+    overflow-x: hidden;
   }
 
   .pub-row {
